<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_connectivity_title"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connected_network_label"
            android:layout_weight="50"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvConnectedNetwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..."
            android:textAlignment="gravity"
            android:layout_weight="50"/>

    </LinearLayout>


    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="Run Test"
        android:id="@+id/btnConnectivityTester"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
        <!--android:onClick=""-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Results"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scrollbarFadeDuration="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apple"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/ivTester"-->
                    <!--android:src="@mipmap/green_checkmark"/>-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="phobos.apple.com 443"
                    android:layout_weight="15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="phobos.apple.com 80"
                    android:layout_weight="15"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="*-courier.apple.com 5223"
                    android:layout_weight="15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="*-courier.apple.com 443"
                    android:layout_weight="15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/failed_connection"
                    android:layout_weight="85"
                    style="@style/Connection_failed"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ocsp.apple.com 443"
                    android:layout_weight="15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/failed_connection"
                    android:layout_weight="85"
                    style="@style/Connection_failed"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ocsp.apple.com 80"
                    android:layout_weight="15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/failed_connection"
                    android:layout_weight="85"
                    style="@style/Connection_failed"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ax.itunes.apple.com 443"
                    android:layout_weight="15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/failed_connection"
                    android:layout_weight="85"
                    style="@style/Connection_failed"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ax.itunes.apple.com 80"
                    android:layout_weight="15"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Android"
                android:textStyle="bold|italic"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="mtalk.google.com 5228"
                    android:layout_weight="15"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="play.google.com 443"
                    android:layout_weight="15"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Windows"
                android:textStyle="bold|italic"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="*.notify.live.net 443"
                    android:layout_weight="15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_connection"
                    android:layout_weight="85"
                    style="@style/Connection_successful"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="*.notify.windows.com 443"
                    android:layout_weight="15"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/btnEmailResults"
        android:text="@string/email_results"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"/>

</LinearLayout>